Fix tile__title overflow
The tile__title should be truncated with an ellipsis to prevent
unsightly overflow or flex-wrapping. Currently, the title just
overflowed the container, so we needed to set a max-width.

--- a/src/components/Tiles/tile.css
+++ b/src/components/Tiles/tile.css
@@ -37,7 +37,7 @@
   }
 
   &__title {
-    @apply text-white text-center text-lg truncate;
+    @apply text-white text-center text-lg truncate max-w-full;
 
     @media (--sm) {
       @apply text-xl;
