--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -9719,6 +9719,7 @@ video {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    max-width: 100%;
   }
 
 @media (min-width: 500px) {
